2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Improve examples and give them better names.

	* examples/consumer-ui.c: Rename examples/test-consumer.c.
	Remove command line interface. Use epc_consumer_list.
	* examples/simple-publisher.c: Rename examples/test-publisher.c.
	* examples/list-resources.c: Improve comments.
	* examples/lookup-resource.c: Minimalistic value lookup example.
	* examples/.gitignore, Makefile.am: Update examples.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Remove bogous description of a return value
	for epc_password_dialog_set_anonymous_allowed.

	* libepc-ui/password-dialog.c: Remove bogous description.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Resolve authentication dead-lock.

	* libepc/shell.c: Print debug information about big-lock handlers.
	* libepc/consumer.c: Aquire GDK big-lock before emitting
	authenticate and reauthenticate signals.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Add capability for listing publisher resources.

	* libepc/publisher.c: Implement URL handler for '/list/' and '/' path.
	* libepc/consumer.c, libepc/consumer.h: Implement epc_consumer_list.
	* examples/list-resources.c: New example for listing resources.
	* Makefile.am, examples/.gitignore: Add examples/list-resources.
	* docs/reference/libepc/libepc-sections.txt: Add epc_consumer_list.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Give EpcConsumer and EpcPublisher separate sections.
	Give separete files for EpcPublisher helper structures.

	* docs/reference/libepc/libepc-docs.xml,
	docs/reference/libepc/libepc-sections.txt: Reorganize sections.
	* libepc/publisher.c: Document EpcAuthContext and EpcContents section.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcContent: "Inhalt" is "contents" with "s", not "content".

	* docs/reference/libepc/libepc-sections.txt,
	examples/test-publisher.c, libepc/publisher.c,